--- a/challenge_one/style.css
+++ b/challenge_one/style.css
@@ -1,10 +1,15 @@
 div {
   background-color: black;
   color: white;
-
   height: 150px;
   width: 150px;
   display: inline-block;
+   
+}
+
+.div-1 {
+ 
+  
 }
 
 .div-2 {
